// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <Link> Дефолтная 1`] = `
<a
  className="sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> Дефолтная с иконкой 1`] = `
<a
  className="sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span
      className="sc-htpNat flmFzH"
    >
      <div>
        Icon
      </div>
    </span>
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> Дополнительний CSS класс 1`] = `
<a
  className="custom sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> Прокидываются неописанные свойства 1`] = `
<a
  className="sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
  style={
    Object {
      "margin": 16,
    }
  }
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> Псевдоссылка 1`] = `
<a
  className="sc-bwzfXH eprhRL"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa dwEJpK"
  >
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> С иконкой слева 1`] = `
<a
  className="sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span
      className="sc-htpNat flmFzH"
    >
      <div>
        Icon
      </div>
    </span>
    <span>
      Link
    </span>
  </span>
</a>
`;

exports[`Верстка компонента <Link> С иконкой справа 1`] = `
<a
  className="sc-bwzfXH itTcug"
  href="#"
  onClick={[Function]}
>
  <span
    className="sc-bdVaJa bwiARo"
  >
    <span>
      Link
    </span>
    <span
      className="sc-htpNat flmFzH"
    >
      <div>
        Icon
      </div>
    </span>
  </span>
</a>
`;
